--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ body {
     background-color: var(--gray);
     height: 100%;
     margin: 0;
+    padding-top: 5rem;
 }
 
 .btnRed {
